--- a/package.json
+++ b/package.json
@@ -1,6 +1,17 @@
-{	
-	appId": "Kvisaz.App",
+{
+  "version": "0.0.0",
+  "productName": "Electron Dock",
+  "appId": "Kvisaz.App",
+  "scripts": {
+    "start": "electron-webpack dev",
+    "make": "electron-webpack",
+    "build": "yarn compile && electron-builder",
+    "build:dir": "yarn build --dir -c.compression=store -c.mac.identity=null"
+  },
   "devDependencies": {
-    "electron-builder": "^22.4.1"
+    "electron": "^8.2.0",
+    "electron-builder": "^22.4.1",
+    "electron-webpack": "^2.7.4",
+    "webpack": "^4.42.1"
   }
 }
