--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "electron-builder": "^22.4.1",
     "electron-webpack": "^2.7.4",
     "webpack": "^4.42.1"
+  },
+  "dependencies": {
+    "html-loader": "^1.0.0-alpha.0"
   }
 }
